# altqft

./: .gitignore  README.md  pyproject.toml  training_landscape.txt  tree.txt
data/: period_model_2q.pth  period_model_3q.pth  period_model_4q.pth  period_model_5q.pth  period_model_6q.pth  period_model_7q.pth  period_model_8q.pth  period_model_9q.pth  training_landscape.txt
doc/archieve/: hi-circ.typ
doc/notes/: .~lock.max_fi.pdf#  max_fi.typ  sinv.typ
doc/paper/: appendix.tex  main.tex  points.md  tmp.typ
figs/illus/: .~lock.illus v0.1.0.pdf#
src/altqft/: __init__.py
src/altqft/algebra/: 2qhih.py  alg.ipynb
src/altqft/backt/: runnn.py  xiaorong.py
src/altqft/checker/: shift_inv.py  try.ipynb
src/altqft/circuits/: hih.py  lr.py  ph.py  rand_his.py
src/altqft/nn/: data_gen.py  process_qc.py  train.py  train_hih.py
src/altqft/state/: flib.py  state.py
src/altqft/tasks/: check_rand_hi.py  draw_counts.py  draw_fi_circuit.py  evaluate_init_cost.py
src/altqft/tasks/fi_data_cal/: cal_fi.py  qft.py
tests/checker/: test_checker.py
tests/circuits/: test_circuit_is_sinv.py
tests/nn/: test_process_qc.py
tests/state/: test_initial_state.py  test_rand_his.py
